modified:   .DS_Store 	modified:   C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Assignment.ipynb

--- a/C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Assignment.ipynb
+++ b/C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Assignment.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "tags": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -953,7 +953,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1052,7 +1052,7 @@
     "\n",
     "With the similarity matrix (`score`) you can begin to implement the loss equations. First, you can extract $cos(A,P)$ by utilizing `tf.linalg.diag_part`. The goal is to grab all the green entries in the diagram above. This is `positive` in the code.\n",
     "\n",
-    "Next, you will create the *closest_negative*. This is the nonduplicate entry in $V_2$ that is closest to (has largest cosine similarity) to an entry in $V_1$, but still has smaller cosine similarity than the positive example. For example, consider row 2 in the score matrix. This row has the cosine similarity between $V_2[2]$ and all four vectors in $V_1$. In this case, the largest value in the off-diagonal is`score[2,3]`$=V_2[3]\\cdot V1[2]$, which has a score of 1. However, since 1 is grater than the similarity for the positive example, this is *not* the *closest_negative*. For this particular row, the *closes_negative* will have to be `score[2,1]=0.36`. This is the maximum value of the 'negative' entries, which are smaller than the 'positive' example.\n",
+    "Next, you will create the *closest_negative*. This is the nonduplicate entry in $V_2$ that is closest to (has largest cosine similarity) to an entry in $V_1$, but still has smaller cosine similarity than the positive example. For example, consider row 2 in the score matrix. This row has the cosine similarity between $V_2[2]$ and all four vectors in $V_1$. In this case, the largest value in the off-diagonal is`score[2,3]`$=V_2[3]\\cdot V_1[2]$, which has a score of 1. However, since 1 is greater than the similarity for the positive example, this is *not* the *closest_negative*. For this particular row, the *closes_negative* will have to be `score[2,1]=0.36`. This is the maximum value of the 'negative' entries, which are smaller than the 'positive' example.\n",
     "\n",
     "To implement this, you need to pick the maximum entry on a row of `score`, ignoring the 'positive'/green entries, and 'negative/blue entry greater that the 'positive' one. To avoid selecting these entries, you can make them larger negative numbers. For this, you can create a mask to identify these two scenarios, multiply it by 2.0 and subtract it out of `scores`. To create the mask, you need to check if the cell is diagonal by computing `tf.eye(batch_size) ==1`, or if the non-diagonal cell is greater than the diagonal with `(negative_zero_on_duplicate > tf.expand_dims(positive, 1)`. Remember that `positive` already has the diagonal values. Now you can use `tf.math.reduce_max`, row by row (axis=1), to select the maximum which is `closest_negative`.\n",
     "\n",
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "tags": [
@@ -1091,35 +1091,34 @@
     "\n",
     "    # use `tf.linalg.matmul` to take the dot product of the two batches. \n",
     "    # Don't forget to transpose the second argument using `transpose_b=True`\n",
-    "    scores = None\n",
+    "    scores = tf.linalg.matmul(v2,v1,transpose_b=True)\n",
     "    # calculate new batch size and cast it as the same datatype as scores. \n",
-    "\n",
     "    batch_size = tf.cast(tf.shape(v1)[0], scores.dtype) \n",
     "    # use `tf.linalg.diag_part` to grab the cosine similarity of all positive examples\n",
-    "    positive = None\n",
+    "    positive = tf.linalg.diag_part(scores)\n",
     "    # subtract the diagonal from scores. You can do this by creating a diagonal matrix with the values \n",
     "    # of all positive examples using `tf.linalg.diag`\n",
-    "    negative_zero_on_duplicate = None\n",
+    "    negative_zero_on_duplicate = scores - tf.linalg.diag(positive)\n",
     "    # use `tf.math.reduce_sum` on `negative_zero_on_duplicate` for `axis=1` and divide it by `(batch_size - 1)`\n",
-    "    mean_negative = None\n",
+    "    mean_negative = tf.math.reduce_sum(negative_zero_on_duplicate, axis=1)/(batch_size - 1)\n",
     "    # create a composition of two masks: \n",
     "    # the first mask to extract the diagonal elements (make sure you use the variable batch_size here), \n",
     "    # the second mask to extract elements in the negative_zero_on_duplicate matrix that are larger than the elements in the diagonal \n",
-    "    mask_exclude_positives = tf.cast((None)|(None),\n",
+    "    mask_exclude_positives = tf.cast((tf.eye(batch_size) == 1) | (negative_zero_on_duplicate > tf.expand_dims(positive, 1)),\n",
     "                                    scores.dtype)\n",
     "    # multiply `mask_exclude_positives` with 2.0 and subtract it out of `negative_zero_on_duplicate`\n",
-    "    negative_without_positive = None\n",
+    "    negative_without_positive = negative_zero_on_duplicate - 2.0 * mask_exclude_positives\n",
     "    # take the row by row `max` of `negative_without_positive`. \n",
     "    # Hint: `tf.math.reduce_max(negative_without_positive, axis = None)`\n",
-    "    closest_negative = None\n",
+    "    closest_negative = tf.math.reduce_max(negative_without_positive, axis=1)\n",
     "    # compute `tf.maximum` among 0.0 and `A`\n",
     "    # A = subtract `positive` from `margin` and add `closest_negative` \n",
-    "    triplet_loss1 = None\n",
+    "    triplet_loss1 = tf.maximum(0.0,margin - positive + closest_negative)\n",
     "    # compute `tf.maximum` among 0.0 and `B`\n",
     "    # B = subtract `positive` from `margin` and add `mean_negative` \n",
-    "    triplet_loss2 = None\n",
+    "    triplet_loss2 = tf.maximum(0.0,margin - positive + mean_negative)\n",
     "    # add the two losses together and take the `tf.math.reduce_sum` of it\n",
-    "    triplet_loss = None\n",
+    "    triplet_loss = tf.math.reduce_sum(triplet_loss1 + triplet_loss2)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -1135,13 +1134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Triplet Loss: 0.703507682515891\n"
+     ]
+    }
+   ],
    "source": [
     "v1 = np.array([[0.26726124, 0.53452248, 0.80178373],[0.5178918 , 0.57543534, 0.63297887]])\n",
     "v2 = np.array([[ 0.26726124,  0.53452248,  0.80178373],[-0.5178918 , -0.57543534, -0.63297887]])\n",
@@ -1172,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1191,13 +1198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mAll tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function!\n",
     "w3_unittest.test_TripletLoss(TripletLoss)"
@@ -1221,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1268,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1305,17 +1320,17 @@
     "    ## START CODE HERE ###\n",
     "\n",
     "    # Instantiate your Siamese model\n",
-    "    model = Siamese(None,\n",
-    "                    vocab_size = None, #set vocab_size accordingly to the size of your vocabulary\n",
-    "                    d_feature = None)\n",
+    "    model = Siamese(text_vectorizer,\n",
+    "                    vocab_size = text_vectorizer.vocabulary_size(), #set vocab_size accordingly to the size of your vocabulary\n",
+    "                    d_feature = d_feature)\n",
     "    # Compile the model\n",
-    "    model.compile(loss=None,\n",
-    "                  optimizer = None\n",
+    "    model.compile(loss=TripletLoss,\n",
+    "                  optimizer = tf.keras.optimizers.Adam(learning_rate=lr)\n",
     "            )\n",
     "    # Train the model \n",
-    "    model.fit(None,\n",
-    "              epochs = None,\n",
-    "              validation_data = None,\n",
+    "    model.fit(train_dataset,\n",
+    "              epochs = train_steps,\n",
+    "              validation_data = val_dataset,\n",
     "             )\n",
     "             \n",
     "    ### END CODE HERE ###\n",
@@ -1334,14 +1349,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
     "scrolled": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "349/349 [==============================] - 33s 83ms/step - loss: 126.8860 - val_loss: 126.5198\n",
+      "Epoch 2/2\n",
+      "349/349 [==============================] - 8s 24ms/step - loss: 126.4862 - val_loss: 126.4036\n"
+     ]
+    }
+   ],
    "source": [
     "train_steps = 2\n",
     "batch_size = 256\n",
@@ -1366,13 +1392,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mAll tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function!\n",
     "w3_unittest.test_train_model(train_model, Siamese, TripletLoss)"
@@ -1398,14 +1432,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
     "scrolled": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"SiameseModel\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
+      "==================================================================================================\n",
+      " input_1 (InputLayer)        [(None, 1)]                  0         []                            \n",
+      "                                                                                                  \n",
+      " input_2 (InputLayer)        [(None, 1)]                  0         []                            \n",
+      "                                                                                                  \n",
+      " sequential (Sequential)     (None, 128)                  4768256   ['input_1[0][0]',             \n",
+      "                                                                     'input_2[0][0]']             \n",
+      "                                                                                                  \n",
+      " conc_1_2 (Concatenate)      (None, 256)                  0         ['sequential[0][0]',          \n",
+      "                                                                     'sequential[1][0]']          \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 4768256 (18.19 MB)\n",
+      "Trainable params: 4768256 (18.19 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.models.load_model('model/trained_model.keras', safe_mode=False, compile=False)\n",
     "\n",
