modified:   .DS_Store 	modified:   C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Assignment.ipynb

--- a/C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Assignment.ipynb
+++ b/C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Assignment.ipynb
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1362,9 +1362,9 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "349/349 [==============================] - 33s 83ms/step - loss: 126.8860 - val_loss: 126.5198\n",
+      "349/349 [==============================] - 32s 83ms/step - loss: 127.0657 - val_loss: 126.9505\n",
       "Epoch 2/2\n",
-      "349/349 [==============================] - 8s 24ms/step - loss: 126.4862 - val_loss: 126.4036\n"
+      "349/349 [==============================] - 8s 24ms/step - loss: 126.7203 - val_loss: 126.4373\n"
      ]
     }
    ],
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1536,21 +1536,20 @@
     "    test_gen = tf.data.Dataset.from_tensor_slices(((test_Q1, test_Q2),None)).batch(batch_size=batch_size)\n",
     "    \n",
     "    ### START CODE HERE ###\n",
-    "\n",
-    "    pred = None\n",
-    "    _, n_feat = None\n",
-    "    v1 = None\n",
-    "    v2 = None\n",
+    "    pred = model.predict(test_gen)\n",
+    "    _, n_feat = pred.shape\n",
+    "    v1 = pred[:,:int(n_feat/2)] # Extract v1 from pred\n",
+    "    v2 = pred[:,int(n_feat/2):] # Extract v2 from pred\n",
     "    \n",
     "    # Compute the cosine similarity. Using `tf.math.reduce_sum`. \n",
     "    # Don't forget to use the appropriate axis argument.\n",
-    "    d  = None\n",
+    "    d  = tf.math.reduce_sum(v1*v2, axis=1)\n",
     "    # Check if d>threshold to make predictions\n",
-    "    y_pred = tf.cast(None, tf.float64)\n",
+    "    y_pred = tf.cast(d > threshold, tf.float64)\n",
     "    # take the average of correct predictions to get the accuracy\n",
-    "    accuracy = None\n",
+    "    accuracy = tf.reduce_mean(tf.cast(y_test == y_pred,tf.float64))\n",
     "    # compute the confusion matrix using `tf.math.confusion_matrix`\n",
-    "    cm = None\n",
+    "    cm = tf.math.confusion_matrix(y_test,y_pred) \n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1559,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1572,7 +1571,19 @@
     "outputId": "103b8449-896f-403d-f011-583df70afdae",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20/20 [==============================] - 1s 5ms/step\n",
+      "Accuracy 0.7259765625\n",
+      "Confusion matrix:\n",
+      "[[4876 1506]\n",
+      " [1300 2558]]\n"
+     ]
+    }
+   ],
    "source": [
     "# this takes around 1 minute\n",
     "accuracy, cm = classify(Q1_test,Q2_test, y_test, 0.7, model,  batch_size = 512) \n",
@@ -1599,13 +1610,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 1s 5ms/step\n",
+      "7/7 [==============================] - 0s 5ms/step\n",
+      "14/14 [==============================] - 0s 4ms/step\n",
+      "14/14 [==============================] - 0s 4ms/step\n",
+      "\u001b[92mAll tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function!\n",
     "w3_unittest.test_classify(classify, model)"
