renamed:    C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Assignment.ipynb -> C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Question_Duplicates_Assignment.ipynb

--- a/C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Question_Duplicates_Assignment.ipynb
+++ b/C3-Natural Language Processing with Sequence Models/Week 3/Python Notebooks/C3W3_Question_Duplicates_Assignment.ipynb
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1701,15 +1701,15 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Call the predict method of your model and save the output into v1v2\n",
-    "    v1v2 = None\n",
+    "    v1v2 = model.predict(generator)\n",
     "    # Extract v1 and v2 from the model output\n",
-    "    v1 = None\n",
-    "    v2 = None\n",
+    "    v1 = v1v2[:,:int(v1v2.shape[1]/2)] \n",
+    "    v2 = v1v2[:,int(v1v2.shape[1]/2):]\n",
     "    # Take the dot product to compute cos similarity of each pair of entries, v1, v2\n",
     "    # Since v1 and v2 are both vectors, use the function tf.math.reduce_sum instead of tf.linalg.matmul\n",
-    "    d = None\n",
+    "    d = tf.math.reduce_sum(v1*v2, axis=1)\n",
     "    # Is d greater than the threshold?\n",
-    "    res = None\n",
+    "    res = d > threshold\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1736,7 +1736,29 @@
     "outputId": "b0907aaf-63c0-448d-99b0-012359381a97",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 13ms/step\n",
+      "Q1  =  When will I see you? \n",
+      "Q2  =  When can I see you again?\n",
+      "d   =  [0.8422112]\n",
+      "res =  [ True]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ True])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Feel free to try with your own questions\n",
     "question1 = \"When will I see you?\"\n",
@@ -1771,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1784,7 +1806,29 @@
     "outputId": "3ed0af7e-5d44-4eb3-cebe-d6f74abe3e41",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "Q1  =  Do they enjoy eating the dessert? \n",
+      "Q2  =  Do they like hiking in the desert?\n",
+      "d   =  [0.12625802]\n",
+      "res =  [False]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([False])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Feel free to try with your own questions\n",
     "question1 = \"Do they enjoy eating the dessert?\"\n",
@@ -1834,13 +1878,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 1s 529ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "\u001b[92mAll tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function!\n",
     "w3_unittest.test_predict(predict, model)"
